--- a/BullsEye/Base.lproj/Main.storyboard
+++ b/BullsEye/Base.lproj/Main.storyboard
@@ -177,8 +177,8 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="aAP-n6-lAe">
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdF-PJ-r0M">
-                                <rect key="frame" x="358" y="293" width="100" height="37"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mdF-PJ-r0M">
+                                <rect key="frame" x="283.5" y="318" width="100" height="37"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="16"/>
                                 <state key="normal" title="Close" backgroundImage="Button-Normal">
                                     <color key="titleColor" red="0.37647058820000001" green="0.1176470588" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -187,8 +187,8 @@
                                     <action selector="close" destination="bJw-sm-pPq" eventType="touchUpInside" id="fHe-NX-lBW"/>
                                 </connections>
                             </button>
-                            <wkWebView contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pcc-Ib-0c4">
-                                <rect key="frame" x="20" y="20" width="627" height="253"/>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Pcc-Ib-0c4">
+                                <rect key="frame" x="20" y="20" width="627" height="278"/>
                                 <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <wkWebViewConfiguration key="configuration">
                                     <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
@@ -198,14 +198,16 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="aAP-n6-lAe" secondAttribute="bottom" id="2HB-wX-dRY"/>
-                            <constraint firstItem="SX7-8U-OCE" firstAttribute="trailing" secondItem="Pcc-Ib-0c4" secondAttribute="trailing" constant="20" id="5BF-LS-CNX"/>
-                            <constraint firstItem="mdF-PJ-r0M" firstAttribute="top" secondItem="Pcc-Ib-0c4" secondAttribute="bottom" constant="20" id="8bz-aX-sGe"/>
-                            <constraint firstItem="Pcc-Ib-0c4" firstAttribute="top" secondItem="SX7-8U-OCE" secondAttribute="top" constant="20" id="KDv-Pp-cQf"/>
-                            <constraint firstItem="Pcc-Ib-0c4" firstAttribute="leading" secondItem="SX7-8U-OCE" secondAttribute="leading" constant="20" id="NIr-5Y-hlF"/>
-                            <constraint firstItem="aAP-n6-lAe" firstAttribute="leading" secondItem="Z4S-eq-TFK" secondAttribute="leading" id="Zd5-Sc-M1T"/>
-                            <constraint firstAttribute="trailing" secondItem="aAP-n6-lAe" secondAttribute="trailing" id="jSE-g4-oQA"/>
-                            <constraint firstItem="aAP-n6-lAe" firstAttribute="top" secondItem="SX7-8U-OCE" secondAttribute="top" id="yH5-rf-LbT"/>
+                            <constraint firstItem="mdF-PJ-r0M" firstAttribute="top" secondItem="Pcc-Ib-0c4" secondAttribute="bottom" constant="20" id="Hob-db-xCg"/>
+                            <constraint firstItem="aAP-n6-lAe" firstAttribute="top" secondItem="SX7-8U-OCE" secondAttribute="top" id="MIW-my-lFC"/>
+                            <constraint firstItem="SX7-8U-OCE" firstAttribute="trailing" secondItem="Pcc-Ib-0c4" secondAttribute="trailing" constant="20" id="Q5B-im-st4"/>
+                            <constraint firstItem="aAP-n6-lAe" firstAttribute="trailing" secondItem="SX7-8U-OCE" secondAttribute="trailing" id="SZn-6U-ZaG"/>
+                            <constraint firstItem="SX7-8U-OCE" firstAttribute="bottom" secondItem="mdF-PJ-r0M" secondAttribute="bottom" constant="20" id="W8B-Tl-aXa"/>
+                            <constraint firstItem="mdF-PJ-r0M" firstAttribute="centerX" secondItem="Z4S-eq-TFK" secondAttribute="centerX" id="dnf-4J-JuP"/>
+                            <constraint firstItem="Pcc-Ib-0c4" firstAttribute="leading" secondItem="SX7-8U-OCE" secondAttribute="leading" constant="20" id="gDb-RR-bXS"/>
+                            <constraint firstItem="aAP-n6-lAe" firstAttribute="leading" secondItem="SX7-8U-OCE" secondAttribute="leading" id="heA-Gf-HQ4"/>
+                            <constraint firstItem="Pcc-Ib-0c4" firstAttribute="top" secondItem="SX7-8U-OCE" secondAttribute="top" constant="20" id="wRZ-4W-bk0"/>
+                            <constraint firstItem="aAP-n6-lAe" firstAttribute="bottom" secondItem="SX7-8U-OCE" secondAttribute="bottom" id="wlz-T2-DjK"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="SX7-8U-OCE"/>
                     </view>
